--- a/client/index.html
+++ b/client/index.html
@@ -1,65 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <title>Funcionarios Estadísticas</title>
-</head>
-<body>
-      <!-- Interfaz inicial, elegir codigo y fechas -->
-      <div class="interfaz-inicial">
-            <label for="plazaCode">
-                  Código plaza:
-                  <input type="text" id="plazaCode">
-            </label>
-            <label for="fInicial">
-                  Fecha inicial:
-                  <input type="date" id="fInicial">
-            </label>
-            <label for="fFinal">
-                  Fecha final:
-                  <input type="date" id="fFinal">
-            </label>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="tooltip.css" />
+    <title>Funcionarios Estadísticas</title>
+  </head>
+  <body>
+    <!-- Interfaz inicial, elegir codigo y fechas -->
+    <div class="interfaz-inicial">
+      <div>
+        <h3 style="display: inline-block">Codigo de plaza</h3>
+        <select
+        id="plazaCode"
+        style="min-width:100px"
+        onchange="changeSelect(value)">
+        </select>
       </div>
-      <!-- Interfaz inicial, elegir codigo y fechas -->
+      <label for="fInicial">
+      <h3 style="display: inline-block">Fecha inicial:</h3>
+        <input type="date" id="fInicial" onchange="setStartDate(value)" />
+      </label>
+      <label for="fFinal">
+                  <h3 style="display: inline-block">Fecha final:</h3>
+        <input type="date" id="fFinal" onchange="setEndDate(value)" />
+      </label>
+    </div>
+    <!-- Interfaz inicial, elegir codigo y fechas -->
 
-      <!-- componentes de acciones -->
-      <div class="general">
-            <!-- codigo de plaza -->
-            <div class="plaza-code">
-                  <h3>Plaza:</h3> 
-                  <label id="codigo">AA0000</label>
-            </div>
-            <!-- codigo de plaza -->
-
-            <!-- Escala para elegir -->
-            <div class="escalas">
-                  <h3>Escala:</h3>
-                  <input type="button" value="Días">
-                  <input type="button" value="Meses">
-                  <input type="button" value="Años">
-            </div>
-            <!-- Escala para elegir -->
-            <div class="grafico-estadistico">
-                  <div class="contenedor-barras">
-                        <div class="barra superior"></div>
-                        <div class="barra aceptado"></div>
-                        <div class="barra inferior"></div>
-                  </div>
-                  <div class="porcentajes"></div>
-                  <div class="fechas">
-                        <div class="fecha-inicial"></div>
-                        <div class="fecha-final"></div>
-                  </div>
-            </div>
-            <!-- Escala para elegir -->
+    <!-- componentes de acciones -->
+    <div class="general">
+      <!-- Escala para elegir -->
+        <label class="escalas">
+          <h3>Escala:</h3>
+          <input type="button" onclick="byDay()" value="Días" />
+          <input type="button" onclick="byMonth()" value="Meses" />
+          <input type="button" onclick="byYear()" value="Años" />
+        </label>
+        <!-- Grosor de las Barras-->
+        <label class="grosor">
+          <h3>Modifique el grosor de las barras</h3>
+          <input
+            type="range"
+            min="10"
+            max="100"
+            value="10"
+            class="slider"
+            id="myRange"
+            style="width:100%; display: block;margin:auto;"
+            oninput="changeScale(value)"
+          />
+        </label>
       </div>
-      <!-- componentes de acciones -->
-      <!-- Volver a la interfaz inicial -->
-      <div class="volver">
 
+      <!-- Escala para elegir -->
+      <div class="grafico-estadistico">
+        <div class="contenedor-barras" id="barContainer" style="">
+          <div class="barra superior"></div>
+          <div class="barra aceptado"></div>
+          <div class="barra inferior"></div>
+        </div>
+        <div class="porcentajes"></div>
+        <div class="fechas">
+          <div class="fecha-inicial"></div>
+          <div class="fecha-final"></div>
+        </div>
       </div>
-      <!-- Volver a la interfaz inicial -->
-</body>
+      <!-- Escala para elegir -->
+    </div>
+    <!-- componentes de acciones -->
+  </body>
+  <script src="./server/nombramientos.js"></script>
+  <script src="main.js"></script>
+  <script src="dragScript.js"></script>
 </html>
