--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <title>Funcionarios Estadísticas</title>
+      <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
       <!-- Interfaz inicial, elegir codigo y fechas -->
