--- a/client/index.html
+++ b/client/index.html
@@ -10,21 +10,19 @@
   </head>
   <body>
     <!-- Interfaz inicial, elegir codigo y fechas -->
-    <div class="interfaz-inicial">
+    <div class="general">
       <div>
-        <h3 style="display: inline-block">Codigo de plaza</h3>
+        <strong>Código de plaza</strong>
         <select
         id="plazaCode"
         style="min-width:100px"
         onchange="changeSelect(value)">
         </select>
       </div>
-      <label for="fInicial">
-      <h3 style="display: inline-block">Fecha inicial:</h3>
+      <label for="fInicial"> <strong>Fecha Inicial</strong> 
         <input type="date" id="fInicial" onchange="setStartDate(value)" />
       </label>
-      <label for="fFinal">
-                  <h3 style="display: inline-block">Fecha final:</h3>
+      <label for="fFinal"> <strong>Fecha Final</strong>
         <input type="date" id="fFinal" onchange="setEndDate(value)" />
       </label>
     </div>
@@ -34,20 +32,21 @@
     <div class="general">
         <!-- Escala para elegir -->
         <label class="escalas">
-          <h3>Escala:</h3>
-          <input type="button" onclick="byDay()" value="Días" />
-          <input type="button" onclick="byMonth()" value="Meses" />
-          <input type="button" onclick="byYear()" value="Años" />
+          <strong>Escala</strong>
+          <input type="button" onclick="byDay('Días')" value="Días" name="btnScale" class="btn active"/>
+          <input type="button" onclick="byMonth('Meses')" value="Meses" name="btnScale" class="btn"/>
+          <input type="button" onclick="byYear('Años')" value="Años" name="btnScale" class="btn"/>
         </label>
         <!-- Escala para elegir -->
         
         <!-- Grosor de las Barras-->
         <label class="grosor">
-          <h3>Modifique el grosor de las barras</h3>
+          <strong>Grosor de barras</strong>
           <input
             type="range"
             min="10"
             max="100"
+            step="10"
             value="10"
             class="slider"
             id="myRange"
@@ -57,17 +56,9 @@
         <!-- Grosor de las Barras-->
 
         <!-- Mostrar Grafico -->
-        <div class="grafico-estadistico">
-          <div class="contenedor-barras" id="barContainer">
-            <div class="barra superior"></div>
-            <div class="barra aceptado"></div>
-            <div class="barra inferior"></div>
-          </div>
-          <div class="porcentajes"></div>
-          <div class="fechas">
-            <div class="fecha-inicial"></div>
-            <div class="fecha-final"></div>
-          </div>
+        <div class="grafico-estadistico" id="grafico">
+            <div class="contenedor-barras" id="barContainer">
+            </div>
         </div>
         <!-- Mostrar Grafico -->
     </div>
